# aescrypt_win

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE.md  README.md  aescrypt.sln  build_dependencies.cmd  version.h.in  version.rc.in
aescrypt/: aescrypt.cpp  aescrypt.def  aescrypt.idl  aescrypt.rc  aescrypt.rgs  aescrypt.vcxproj  aescrypt_shell_extension.cpp  aescrypt_shell_extension.h  aescrypt_shell_extension.rgs  file_list.h  framework.h  globals.h  has_aes_extension.cpp  has_aes_extension.h  long_path.manifest  password_convert.cpp  password_convert.h  password_dialog.cpp  password_dialog.h  progress_dialog.cpp  progress_dialog.h  report_error.cpp  report_error.h  resource.h  secure_containers.h  version.h  worker_threads.cpp  worker_threads.h
aescrypt32/: aescrypt32.cpp  aescrypt32.h  aescrypt32.rc  aescrypt32.vcxproj  aescrypt_launcher.cpp  aescrypt_launcher.rc  framework.h  pch.cpp  resource.h  targetver.h
aescrypt_launcher/: aescrypt_launcher.cpp  aescrypt_launcher.h  aescrypt_launcher.rc  aescrypt_launcher.vcxproj  pch.cpp  pch.h  resource.h
aescrypt_ps/: aescrypt_ps.def  aescrypt_ps.vcxproj
dependencies/: CMakeLists.txt
setup/: setup.vdproj
